--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,16 @@ after_success:
   - docker push lchewy/multi-nginx
   - docker push lchewy/multi-server
   - docker push lchewy/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
+  app:  multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-1-160061621485
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
